--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "start": "node server/index.js",
+    "start": "webpack && node server/index.js",
     "submit": "mocha",
-    "test": "npm run build && mocha test/**/*.spec.js",
+    "test": "npm run build && mocha test/**/*.spec.js --exit",
     "watch": "webpack --watch"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-register": "^6.4.3",
     "cross-spawn": "^5.1.0",
+    "electron": "^1.7.11",
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
     "lodash": "^4.15.0",
